2001-08-25  Richard Hult  <rhult@codefactory.se>

	* src/Makefile.am: Generate the oaf.in from oaf.in.in and add the
	oaf and oaf.in to CLEANFILES.

	* src/GNOME_DevHelp.oaf.in.in: Move from oaf.in to oaf.in.in and
	don't hard code the library path for the shlib component. Also
	remove Moniker from the list of supported interfaces since we
	don't have a moniker.  

2001-08-25  Mikael Hallendal  <micke@codefactory.se>

	* ui/Makefile.am (ui_DATA): added with:
	- GNOME_DevHelp.ui (the DevHelp client's ui)
	- GNOME_DevHelp_Controller.ui (UI that comes from the Controller).

	* src/preferences.c: 
	- Use GtkArgs instead of get/set-functions.
	- Added signals for when arguments changes.
	- Removed all autocompletion-prefs since they are not used any
	  longer. Always autocompletion and it's done in an idle so
	  therefor autocomp.-speed is removed aswell.
	- Made into a object that inherits GtkObject.
	- Removed dependency on ui.c
	(preferences_get_type): added/impl.
	(preferences_init): added/impl.
	(preferences_class_init): added/impl.
	(preferences_set_*): removed
	(preferences_get_*): removed
	(preferences_get_arg): added/impl.
	(preferences_set_arg): added/impl.
	(gconf_*_changed_cb): emit signal instead of calling 
	 functions all over the place.

	* src/preferences-dialog.c: 
	- removed unused stuff from PreferenceDialog-struct. 
	- removed all GConf-stuff. Listen to signals from Prefernces
  	  instead.
	- Removed all autocompletion-stuff.
	- Use Preferences GtkArg's instead of get/set-functions
	(pd_zoom_level_changed_cb): Preferences-cb instead of gconf-cb.
	(pd_sidebar_visible_changed_cb): dito.
	(gconf_autocompletion_changed_cb): removed	
	(prefs_destroy_cb): don't remove listeners from gconf.
	(preferences_dialog_new): renamed from
	  menu_preferences_activate_cb and cleaned up.

	* src/main.c: 
	(corba_search_cb): removed.
	(corba_search_in_new_window_cb): removed.
	(devhelp_factory): don't listen to any help_browser signals.