@@ -3,7 +3,7 @@ AC_INIT(src/Makefile.am)
 DEVHELP_VERSION=0.1.1
 
 BONOBO_REQUIRED=1.0.0
-GCONF_REQUIRED=0.12
+GCONF_REQUIRED=1.0.4
 GLIB_REQUIRED=1.2.9
 GNOME_REQUIRED=1.2.8
 GNOME_LIBS_REQUIRED=1.2.8
@@ -140,11 +140,10 @@ AC_SUBST(IDL_FLAGS)
 
 dnl GCONF
 dnl 
-AM_PATH_GCONF(0.12,,,gconf-gtk)
-
-GCONF_CONFIG_SOURCE=
-AC_ARG_ENABLE(gconf-source, 
-            [  --enable-gconf-source=sourceaddress        Where to install schema files.],GCONF_CONFIG_SOURCE=$enable_gconf_source,)
+AM_PATH_GCONF($GCONF_REQUIRED,,AC_MSG_ERROR([
+*** gconf >= $GCONF_REQUIRED is required]),
+gconf-gtk)
+AM_GCONF_SOURCE
 				 
 # find the actual value for $prefix that we'll end up with
 REAL_PREFIX=
@@ -160,15 +159,6 @@ prefix=$REAL_PREFIX
 EXPANDED_SYSCONFDIR=`eval echo $SYSCONFDIR_TMP`
 prefix=$old_prefix
 AC_SUBST(EXPANDED_SYSCONFDIR)
-
-if test "x$GCONF_CONFIG_SOURCE" = "x"; then
-   	GCONF_CONFIG_SOURCE="xml::$EXPANDED_SYSCONFDIR/gconf/gconf.xml.defaults"
-        AC_MSG_RESULT("Using default config source $GCONF_CONFIG_SOURCE for schema installation")
-else
-        AC_MSG_RESULT("Using config source $GCONF_CONFIG_SOURCE for schema installation")
-fi
-
-AC_SUBST(GCONF_CONFIG_SOURCE)
 
 ALL_LINGUAS="de ru sv"
 AM_GNOME_GETTEXT
